# hr-screening-bot

./: .gitignore  Dockerfile  context.yaml  docker-compose.yml  old_prompt.yaml  prompt.yaml  pyproject.toml  readme.md  requirements.txt
bot/: __main__.py  settings.py
bot/database/: base.py  helper.py  models.py
bot/filters/: hr.py
bot/middlewares/: db.py
bot/routers/candidates/: __init__.py  questions.py  start.py
bot/routers/hr/: __init__.py  config.py  generate.py  start.py
bot/utils/: chatgpt.py
