[tool.poetry]
name = "hr-bot-order"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
sqlalchemy = "^2.0.30"
psycopg = "^3.1.18"
psycopg-binary = "^3.1.18"
pydantic-settings = {extras = ["yaml"], version = "^2.2.1"}
langchain = "^0.2.0"
pypdf = "^4.2.0"
openai = "^1.30.1"
langchain-community = "^0.2.0"
langchain-openai = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
